--- a/ReactApplication/src/app/app.css
+++ b/ReactApplication/src/app/app.css
@@ -452,9 +452,28 @@ optgroup {
 /**
  * Remove most spacing between table cells.
  */
+ .App {
+  width: 100%;
+  height: 100vh;
+ 
+  justify-content: center;
+  align-items: center;
+}
+
 table {
-  border-collapse: collapse;
-  border-spacing: 0; }
+  border-collapse: collapse; 
+  width: 45%; 
+  margin-right: 10px; 
+    
+ }
+
+.table-container { 
+  display: flex; 
+  justify-content: space-between; 
+  table-layout:fixed;
+  margin: 20px; 
+} 
+
 
 td,
 th {
